--- a/01_expanding_cards/index.html
+++ b/01_expanding_cards/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EXPANDING CARDS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="cards-container">
+        <div class="card-1 card">
+            <h3>Nature is the source of all arts</h3>
+        </div>
+
+        <div class="card-2 card">
+            <h3>I love nature a lot</h3>
+        </div>
+
+        <div class="card-3 card">
+            <h3>Nature is wonderful</h3>
+        </div>
+
+        <div class="card-4 card">
+            <h3>we need more natue</h3>
+        </div>
+
+        <div class="card-5 card">
+            <h3>take to a beautiful place like this one</h3>
+        </div>
+    </div>
 </body>
 </html>
