--- a/01_expanding_cards/index.html
+++ b/01_expanding_cards/index.html
@@ -25,8 +25,9 @@
         </div>
 
         <div class="card-5 card">
-            <h3>take to a beautiful place like this one</h3>
+            <h3>let's go to a beautiful place like this one</h3>
         </div>
     </div>
+        <script src="script.js"></script>
 </body>
 </html>
